--- a/YNK_front/project/page/component/index.wxss
+++ b/YNK_front/project/page/component/index.wxss
@@ -7,7 +7,7 @@ swiper-item image {
     height: 100%;
 }
 
-.select-title,.newest-title{
+.select-title,.newgood-title{
     width: 100%;
     padding:30rpx 0;
     height: 40rpx;
@@ -29,26 +29,69 @@ swiper-item image {
     height: 100%;
 }
 
-.newest-box{
-    padding:0 40rpx;
+.newgood{
+    padding: 0 20rpx;
 }
-.newest-box .newest-list{
-    display: inline-block;
-    width: 325rpx;
-    height: 325rpx;
-    margin:0 20rpx 20rpx 0;
+.newgood-box{
+}
+.newgood-box .newgood-list {
+    display: block;
+    /* width: 325rpx; */
+    /* height: 325rpx; */
+    margin:0 0rpx 20rpx 0;
     border-radius: 10px;
     text-align: center;
     background: #f5f6f5;
 }
-.newest-box .newest-list:nth-child(2n){
-    margin-right: 0;
+.newgood-box .newgood-list navigator{
+    display:flex;    
+    justify-content: space-around;
+    align-items: center;
+}   
+.newgood-box .newgood-list navigator view{
+    /* height: 100%; */
 }
-.newest-box .newest-list image{
+.newgood-box .newgood-list image{
     width: 175rpx;
     height: 175rpx;
     margin: 20rpx 0 10rpx;
 }
-.newest-box .newest-list .newest-text{
+.newgood-box .newgood-list .newgood-text{
     font-size: 32rpx;
+    text-align: left;
+}
+.nav-left image{
+    border-radius: 15rpx;
+}
+.nav-right{
+    position: relative;
+    height:175rpx;
+    width: 500rpx;
+}
+.good-name{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    -webkit-line-clamp: 2;    /* white-space:nowrap;   */
+}
+.good-peice{
+    color:rgba(171,149,109,0.5)
+}
+.newgood-text-user{
+    width: 100%;
+    position: absolute;
+    bottom: 0rpx;
+    display: flex;
+    font-size: 24rpx;
+    color: gray
+}
+.newgood-text-user view{
+    margin-right: 20rpx;
+}
+.botton{
+    height: 60rpx;
+    background-color: #f5f5f5;
+    color:gray;
+    text-align: center;
 }
