--- a/YNK_front/project/page/component/publish/publish.wxml
+++ b/YNK_front/project/page/component/publish/publish.wxml
@@ -2,9 +2,9 @@
 
 <view class="main">
   <view class="message panel">
-    <input class="title" placeholder='简要'></input>
+    <input class="title" placeholder='简要' data-name="name" bindinput="inputedit" value="{{good_name}}"></input>
     <view class="div-line"></view>
-    <textarea auto-height="true" maxlength="-1" class="detail" placeholder='简要' value="{{textarea_value}}">
+    <textarea auto-height="true" maxlength="-1" class="detail" placeholder='简要' data-name="discribe" value="{{textarea_value}}" bindinput="textareaedit">
           
     </textarea>
     <template-quickinput class='quickinput' options="{{options}}" bind:myevent="select" hover-stop-propagation="true"></template-quickinput>        
@@ -13,21 +13,21 @@
   </view>
   <view class="img panel">
   
-    <view class="question-images">
-      <view wx:if="{{images.length==0}}" class="question-hint" hover-class="none" hover-stop-propagation="false">
-        选择你的闲置物品叭
+    <view class="good-images">
+      <view wx:if="{{images.length==0}}" class="images-hint" hover-class="none" hover-stop-propagation="false">
+        选择你的闲置物品8
       </view>
         
       <block class="images-item" wx:for="{{images}}" wx:key="*this">
-        <view class="q-image-wrap">
+        <view class="image-wrap">
           <!-- 图片缩略图  -->
-          <image class="q-image" src="{{item}}" mode="aspectFill" data-idx="{{index}}" bindtap="handleImagePreview"></image>
+          <image class="image" src="{{item}}" mode="aspectFill" data-idx="{{index}}" bindtap="handleImagePreview"></image>
           <!-- 移除图片的按钮  -->
-          <icon class="iconfont icon-close q-image-remover" data-idx="{{index}}" bindtap="removeImage"></icon>
+          <icon class="iconfont icon-close image-remover" data-idx="{{index}}" bindtap="removeImage"></icon>
         </view>
       </block>
     </view>   
-    <view class="question-opera" hover-class="none" hover-stop-propagation="false">
+    <view class="image-opera" hover-class="none" hover-stop-propagation="false">
       <button
         class="add-img"
         type="default" size="mini" bindtap="chooseImage" 
@@ -57,7 +57,16 @@
     
     
     </view>
-
+    <view class="div-line"></view>
+    <view class="price" hover-class="none" hover-stop-propagation="false">
+      <view class="price-btn-left">      
+        <input type="number" data-name="price"></input>
+      </view>
+      <view class="price-btn-right">
+        <text class="text-placeholder">价格</text>
+        <icon class='iconfont icon-rmb'></icon>
+      </view>
+    </view>
   
 
   </view>
@@ -65,9 +74,12 @@
 
   
 
-  <view class="price panel" hover-class="none" hover-stop-propagation="false">
-    <input type="number" ></input>
-    
+
+  
+  <view class="submit">
+    <button class="submit-btn" bindtap="submit"> 
+      发布
+    </button>
   </view>
     
 
