--- a/YNK_front/project/page/component/publish/publish.wxss
+++ b/YNK_front/project/page/component/publish/publish.wxss
@@ -1,9 +1,15 @@
 /* page/component/publish/publish.wxss */
 @import "../../common/iconfont.wxss";
 
-
-
+::-webkit-scrollbar{
+  width:0;
+  height: 0;
+  color: transparent;
+}
 .category-btn{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   text-align: left;
   overflow: hidden;
   background-color: transparent;
@@ -19,15 +25,24 @@ button::after {
   border: none;
 }
 
-
+.price{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 14px;
+  text-align: left;
+  overflow: hidden;
+  background-color: transparent;
+  border: 0px solid snow;
+}
 
 .panel{
-  background-color: #f5f6f5;
+  background-color: rgb(245, 245, 245);
   border-radius: 2px;
-  margin: 30rpx 5rpx;
+  margin: 30rpx 5rpx ;
   padding: 20rpx 5px;
   box-shadow: 0 4rpx 8rpx 0 rgba(0,0,0,0.20);
-
+  overflow: hidden;
 }
 .div-line{
   background: #E0E3DA;
@@ -49,15 +64,19 @@ button::after {
 }
 .quickinput{
   width: 95%;
-  position: absolute;
-  bottom: 10rpx;
+  /* position: absolute; */
+  /* bottom: 10rpx; */
   margin: 0 auto;
   z-index: 100;
+  font-size: 28rpx;
   /* overflow-x: scroll; */
 }
 
 /* 图片预览部分 */
-.question-hint{
+.good-images{
+  min-height: 200rpx;
+}
+.images-hint{
   text-align: center;
 }
 .add-img{
@@ -66,17 +85,17 @@ button::after {
   display:block;
   margin:0 auto
 }
-.q-image{
+.image{
   width: 200rpx;
   height:200rpx;
 }
-.q-image-wrap{
+.image-wrap{
   position: relative;
   display: inline-block;
   margin: 20rpx 21rpx;
 
 }
-.q-image-remover{
+.image-remover{
   position: absolute;
   right: 15rpx;
   top: -5rpx;
@@ -84,7 +103,7 @@ button::after {
   /* height: 20rpx; */
   transform: scale(1.8)
 }
-.question-opera{
+.image-opera{
   text-align: center;
 }
 
@@ -100,9 +119,14 @@ button::after {
   /* position: absolute; */
   /* right: 0rpx; */
 }
-.category-btn>view{
-  display: inline-block;
+
+.submit{
+  /* display: block; */
+  /* position: absolute; */
+  /* bottom:10rpx; */
+  /* width: 100%; */
 }
-.category-btn-right{
-  float: right
+.submit-btn{
+  background-color: #AB956D ;
+  color:white;
 }
