--- a/YNK_front/project/page/component/user/user.wxml
+++ b/YNK_front/project/page/component/user/user.wxml
@@ -4,6 +4,16 @@
         <text class="nickname">{{nickname}}</text>
         <text class="about">关于我们</text>
     </view>
+    <view class="deals-tab-box">
+        <view class="deals-tab-nav on" bindtap="to" data-index="0">
+            <image class="deals-icon" src="/image/cart2.png" />
+            <text class="" selectable="false" space="false" decode="false">
+                想要
+            </text>
+        </view>
+        <view class="deals-tab-nav on" bindtap="to" data-index="1">已发布</view>
+        <view class="deals-tab-nav on" bindtap="to" data-index="2">订单</view>
+    </view>
     <view class="address-box">
         <view class="address-manage">
             <navigator url="/page/component/address/address">地址管理</navigator>
