--- a/YNK_front/project/page/component/category/category.wxss
+++ b/YNK_front/project/page/component/category/category.wxss
@@ -1,5 +1,39 @@
 @import '../../common/common.wxss';
 
+
+button::after {
+    border: none;
+}
+
+.search{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #AB956D;
+    height: 70rpx;
+}
+.search input{
+    width: 70%;
+    border-radius: 20rpx;
+    background-color: rgba(255,255,255,0.8);
+    text-indent:10rpx;
+    padding-left: 10rpx;
+}
+.search button{
+    height: 100%;
+    width: 10%;
+    margin: 0;
+    padding: 0;
+    line-height: 70rpx;
+    background-color: rgba(255,255,255,0);
+}
+
+
+
+
+
+
+
 page,.main{
     height: 100%;
 }
