--- a/YNK_front/project/page/component/chat/chat.wxml
+++ b/YNK_front/project/page/component/chat/chat.wxml
@@ -1,3 +1,6 @@
+<!-- <button bind:tap="closeSocket">close socket</button> -->
+
+
 <scroll-view upper-threshold="100" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}" scroll-y="true" focus="{{mode}}" enable-back-to-top="true" style="height: {{scroll_height}}px;" class="message-list">
 	<!-- 每一行 -->
 	<view class="row" wx:for="{{message_list}}" wx:key="" id="row_{{index}}">
