--- a/YNK_front/project/page/component/details/details.wxss
+++ b/YNK_front/project/page/component/details/details.wxss
@@ -1,19 +1,32 @@
 @import '../../common/common.wxss';
-
-.goods-box{
+@import '../../common/iconfont.wxss';
+.main{
+    padding-bottom: 80rpx;
+}
+.icon-qicheqianlian-1-copy, .icon-goumai1{
+    font-size: 55rpx;
+}
+.iconfont{margin-left: -80rpx}
+.cart{
+    position: fixed;
+    bottom:150rpx;
+    right:50rpx;
+}
+.goods-box {
     position: relative;
     padding: 40rpx 45rpx;
     text-align: center;
     color: #454552;
     border-bottom: 30rpx solid #ededed;
 }
-.goods-box .goods-thumb{
+
+.goods-box .goods-thumb {
     width: 300rpx;
     height: 300rpx;
     margin: 35rpx 0 125rpx;
 }
 
-.to-carts-icon{
+.to-carts-icon {
     position: absolute;
     right: 70rpx;
     top: 70rpx;
@@ -24,52 +37,62 @@
     -webkit-animation: to_cart .3s ease-out;
     animation: to_cart .3s ease-out;
 }
+
 @-webkit-keyframes to_cart {
-    0%{
-        right:100rpx;
-        top:530rpx;
+    0% {
+        right: 100rpx;
+        top: 530rpx;
         -webkit-transform: scale(4);
     }
+
     /*60%{
         top: 20rpx;
     }*/
 }
+
 @keyframes to_cart {
-    0%{
-        right:100rpx;
-        top:530rpx;
+    0% {
+        right: 100rpx;
+        top: 530rpx;
         transform: scale(4);
     }
+
     /*60%{
         top: 20rpx;
     }*/
 }
-.carts-icon{
+
+.carts-icon {
     position: absolute;
     right: 40rpx;
-    top: 40rpx;
+    /* top: 40rpx; */
     width: 75rpx;
     height: 75rpx;
 }
-.carts-icon image{
+
+.carts-icon image {
     width: 100%;
     height: 100%;
 }
-.carts-icon.on{
+
+.carts-icon.on {
     -webkit-animation: to_cart_scale .3s ease;
     animation: to_cart_scale .3s ease;
 }
+
 @-webkit-keyframes to_cart_scale {
-    50%{
+    50% {
         -webkit-transform: scale(1.2);
     }
 }
+
 @keyframes to_cart_scale {
-    50%{
+    50% {
         transform: scale(1.2);
     }
 }
-.carts-icon-num{
+
+.carts-icon-num {
     position: absolute;
     left: -15rpx;
     width: 40rpx;
@@ -80,36 +103,47 @@
     color: #fff;
     font-size: 24rpx;
 }
-.goods-box .goods-operation{
+
+.goods-operation {
+    position: fixed;
+    bottom: 0rpx;
     display: flex;
-    position: relative;
+    justify-content: space-around;
+    /* position: relative; */
     width: 100%;
     height: 100rpx;
     line-height: 100rpx;
     padding: 0 50rpx;
-    margin-bottom: 60rpx;
     box-sizing: border-box;
-    border-radius: 50rpx;
-    background: #AB956D;
-    color: #fff;
+    background: white;
+    color: rosybrown;
     font-size: 28rpx;
 }
-.goods-operation text{
-    display: inline-block;
+.opera-item{
+    /* width: 33.3%; */
+    display: flex;
+}
+.goods-operation text {
     height: 100rpx;
 }
-.goods-operation-num{
+
+.goods-operation-num {
     width: 160rpx;
 }
-.goods-operation-add{
+
+.goods-operation-add {
     width: 80rpx;
     margin-right: 30rpx;
 }
-.goods-to-cart{
-    width: 210rpx;
-    padding-right: 75rpx;
+.operation-leavemsg{
+    border-right:1rpx solid gray
 }
-.goods-cart-img{
+.goods-to-cart {
+    width: 210rpx;
+    /* padding-right: 75rpx; */
+}
+
+.goods-cart-img {
     position: absolute;
     right: 50rpx;
     top: 28rpx;
@@ -117,18 +151,22 @@
     height: 45rpx;
 }
 
-.goods-stock{
+.goods-stock {
     font-size: 28rpx;
     margin-bottom: 20rpx;
 }
-.goods-title{
+
+.goods-title {
     font-size: 40rpx;
     margin-bottom: 30rpx;
 }
-.goods-price{
+
+.goods-price {
     font-size: 40rpx;
+    color:rosybrown
 }
-.goods-tab-nav{
+
+.goods-tab-nav {
     display: inline-block;
     width: 33.33%;
     height: 90rpx;
@@ -138,10 +176,12 @@
     text-align: center;
     color: #c7c7cb;
 }
-.goods-tab-nav.on{
+
+.goods-tab-nav.on {
     color: #bcaa8a;
     border-bottom: 5rpx solid #bcaa8a;
 }
-.goods-content{
+
+.goods-content {
     padding: 40rpx;
 }
