--- a/YNK_front/project/page/component/user/user.wxss
+++ b/YNK_front/project/page/component/user/user.wxss
@@ -1,10 +1,13 @@
 @import '../../common/common.wxss';
+@import "../../common/iconfont.wxss";
 
 .header{
+    /* display: flex; */
     position: relative;
     height: 160rpx;
     line-height: 100rpx;
-    padding:30rpx 30rpx 30rpx 150rpx;
+    /* border-bottom: 20rpx solid #ededed; */
+    padding:30rpx 30rpx 30rpx 150rpx; 
     box-sizing: border-box;
     background: #AB956D;
     font-size: 28rpx;
@@ -16,27 +19,31 @@
     top: 30rpx;
     width: 100rpx;
     height: 100rpx;
-    border-radius: 50%;
+    overflow: hidden;
+    border-radius: 50% !important;
 }
 .header .about{
     float: right;
 }
 
+.deals-tab-box{
+    border-bottom: 1rpx solid #ededed;
+    width: 90%;
+    margin: 0 auto;
 
-
+}
 .deals-tab-nav{
     display: inline-block;
-    width: 33.33%;
-    height: 90rpx;
-    line-height: 90rpx;
-    border-bottom: 1rpx solid #ededed;
+    width: 24.5%;
+    height: 100rpx;
+    /* line-height: 90rpx; */
     box-sizing: border-box;
     text-align: center;
     color: #c7c7cb;
 }
 .deals-tab-nav.on{
     color: #bcaa8a;
-    border-bottom: 5rpx solid #bcaa8a;
+    border-bottom: 3rpx solid #bcaa8a;
 }
 .deals-content{
     padding: 40rpx;
